how to ask question

--- a/1 start/1.2 soft-tools.md
+++ b/1 start/1.2 soft-tools.md
@@ -10,7 +10,7 @@
 
   GitHub 能干嘛？ [怎样使用 GitHub？](https://www.zhihu.com/question/20070065) 可以先粗略了解
 
-**为什么要装这些工具？**
+### 为什么要装这些工具？
 
 这个课程就是一个 Game ， 最终的 [MVP](http://wiki.mbalib.com/wiki/%E6%9C%80%E7%AE%80%E5%8F%AF%E8%A1%8C%E4%BA%A7%E5%93%81) 就是使用 HTML 、CSS、JavaScript 完成一个自己的静态网站并共享给他人。所以主线任务会围绕这一 MVP 进行。
 
