how-to-write-blog

--- a/2 基本技能/2.1 how-to-ask-question.md
+++ b/2 基本技能/2.1 how-to-ask-question.md
@@ -2,8 +2,6 @@
 
 ### 学习目标
 
-***
-
 提问是学习过程中必须掌握的技能，它又分为两个场景：
 
 - 如何当面向人请教技术问题
@@ -12,8 +10,6 @@
 
 
 ### 学习内容
-
-***
 
 1. 遇到问题时，如何全面正确的分析问题，找到关键因素
 2. 如何使用“向小黄鸭提问”的方法来帮助自己理清路
@@ -24,9 +20,7 @@
 
 
 
-### 工具与资源
-
-***
+### 资源与工具
 
 - [http://segmentfault.com](http://segmentfault.com/) - 技术类问答网站(国内)
 - [https://stackoverflow.com](https://stackoverflow.com/) - 技术类问答网站(国外)
