--- a/2 基本技能/2.1 how-to-ask-question.md
+++ b/2 基本技能/2.1 how-to-ask-question.md
@@ -1,6 +1,6 @@
 # 如何提问
 
-### 学习目标
+#### 学习目标 
 
 提问是学习过程中必须掌握的技能，它又分为两个场景：
 
@@ -8,8 +8,7 @@
 - 如何在问答网站上提问。
 
 
-
-### 学习内容
+#### 学习内容
 
 1. 遇到问题时，如何全面正确的分析问题，找到关键因素
 2. 如何使用“向小黄鸭提问”的方法来帮助自己理清路
@@ -19,8 +18,7 @@
 6. 好用的技术类问答网站
 
 
-
-### 资源与工具
+#### 资源与工具
 
 - [http://segmentfault.com](http://segmentfault.com/) - 技术类问答网站(国内)
 - [https://stackoverflow.com](https://stackoverflow.com/) - 技术类问答网站(国外)
