--- a/2 基本技能/2.2 intro-markdown.md
+++ b/2 基本技能/2.2 intro-markdown.md
@@ -1,14 +1,12 @@
 # markdown 使用
 
-### 学习目标
+#### 学习目标
 
 
 
 能够熟练掌握 markdown 语法，并能够使用 markdown 来写博客。
 
-
-
-### 学习内容
+#### 学习内容
 
 
 
@@ -23,8 +21,7 @@
 - 表格
 
 
-
-### 资源与工具
+#### 资源与工具
 
 
 
