--- a/2 基本技能/2.4 intro-git.md
+++ b/2 基本技能/2.4 intro-git.md
@@ -1,12 +1,10 @@
 # Git 简单应用
 
-### 学习目标
+#### 学习目标
 
-- 能够使用常见的 Git 命令，以便在后面的任务中可以将自己的代码提交到 GitHub 上，并且可以使用 GitHub 可以友好的和小伙伴一起协作打怪升级。
+能够使用常见的 Git 命令，以便在后面的任务中可以将自己的代码提交到 GitHub 上，并且可以使用 GitHub 可以友好的和小伙伴一起协作打怪升级。
 
-
-
-### 学习内容
+#### 学习内容
 
 - 如何在系统上安装git
 - 如何配置git基本信息：`git config`
@@ -20,10 +18,10 @@
 - 如何把远程代码拉到本地：`git pull`
 
 
-### 资源与工具
+#### 资源与工具
 
 
 
-- 廖雪峰的git在线教程：<http://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000>
+- 廖雪峰的 Git 在线教程：<http://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000>
 - Git 的基础内容的学习： <https://try.github.io/>
 
