--- a/2 基本技能/2.5 intro-github-pages.md
+++ b/2 基本技能/2.5 intro-github-pages.md
@@ -1,10 +1,10 @@
 # Git 简单应用
 
-### 学习目标
+#### 学习目标
 
-- 能够使用 GitHub Pages 来搭建自己的静态页面
+能够使用 GitHub Pages 来搭建自己的静态页面
 
-### 学习内容
+#### 学习内容
 
 1. 什么是 GitHub Pages
 
@@ -26,22 +26,22 @@
 
 使用 `username.github.io` 作为仓库名，其中 username 是你 github 的用户名。最后点击 `create repository`
 
-![](../images/create.png)
+![](../assets/create1.png)
 
 **第三步：**在创建好的仓库中添加一个 index.html 文件
 
-![](../images/create-index1.png)
+![](../assets/create-index1.png)
 
-![](../images/create-index2.png)
+![](../assets/create-index2.png)
 
-![](../images/create-finish.png )
+![](../assets/create-finish.png )
 
 这样一个简单的静态网站就搭建成功了，你也可以搭建自己的博客、建立等，然后把网址发给小伙伴，你的小伙伴就可以看到你的网站了。
 
 > 注：第三步的操作也可以使用 Git 来完成
 
-### 资源与工具
+#### 资源与工具
 
 - [GitHub pages 搭建](https://pages.github.com/)
-- 廖雪峰的git在线教程：<http://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000>
+- 廖雪峰的 Git 在线教程：<http://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000>
 - Git 的基础内容的学习： <https://try.github.io/>
