Track 10 files into repository.
- modified 2 基本技能/2.1 how-to-ask-question.md
- modified 2 基本技能/2.2 intro-markdown.md
- modified 2 基本技能/2.3 how-to-write-blog.md
- modified 2 基本技能/2.4 intro-git.md
- untracked 2 基本技能/2.5 intro-github-pages.md
- untracked 3 JavaScript基础/DOM 介绍.md
- untracked assets/create-finish.png
- untracked assets/create-index1.png
- untracked assets/create-index2.png
- untracked assets/create1.png

Auto commit by GitBook Editor

--- a/2 基本技能/2.3 how-to-write-blog.md
+++ b/2 基本技能/2.3 how-to-write-blog.md
@@ -1,12 +1,10 @@
 # 如何写 Blog
 
-### 学习目标
+#### 学习目标
 
 掌握如何以博客的形式来整理和表达自己平时学到的知识和思考，博客能够做到结构清晰、图文并茂、表达清楚
 
-
-
-###　学习内容
+#### 学习内容
 
 1. 熟练使用markdown进行写作和排版
 2. 结构化的表达观点和内容
@@ -16,9 +14,7 @@
 6. 在简书内发表一篇关于 **如何提问** 的文章，并在下方回复文章的链接
 
 
-
-
-### 资源与工具
+#### 资源与工具
 
 - [简书](http://jianshu.com/) 
 - 写文章三段式：<http://www.cnblogs.com/top5/archive/2010/05/19/1739286.html>
