--- a/2 基本技能/2.5 intro-github-pages.md
+++ b/2 基本技能/2.5 intro-github-pages.md
@@ -36,7 +36,7 @@
 
 ![](../assets/create-finish.png )
 
-这样一个简单的静态网站就搭建成功了，你也可以搭建自己的博客、建立等，然后把网址发给小伙伴，你的小伙伴就可以看到你的网站了。
+这样一个简单的静态网站就搭建成功了，你也可以搭建自己的博客、简历等，然后把网址发给小伙伴，你的小伙伴就可以看到你的网站了。
 
 > 注：第三步的操作也可以使用 Git 来完成
 
