--- a/3 JavaScript基础/3.9 shu-zu.md
+++ b/3 JavaScript基础/3.9 shu-zu.md
@@ -48,7 +48,7 @@ fruits.length = 2;
 console.log(fruits[2]); // undefined - 相当于删除了数组中的第三项
 ```
 
-JS中常用方法：
+JavaScript中常用方法：
 * `push()`方法
 向数组的末尾添加新的元素。示例如下：
 ```JavaScript
@@ -86,7 +86,7 @@ var fruits = ['apple', 'pear', 'peach'];
 console.log(fruits.indexOf('pear')); // 1 
 ```
 
-#### 其他推荐资料
+#### 其他资料推荐
 * [JavaScript数组 - MDN](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Array)
 * [js数组方法全面总结](http://www.jianshu.com/p/a339893df4aa)
 * [javascript：数组总结](https://segmentfault.com/a/1190000002957308)
