--- a/3 JavaScript基础/3.91 han-shu.md
+++ b/3 JavaScript基础/3.91 han-shu.md
@@ -45,7 +45,7 @@ alert(result); // 8
 ```
 最终的结果将会弹出`8`。这里可以注意到，我们需要用一个变量(`result`)来接收`add(3,5)`返回的值，这是因为我们在`add()`函数内部将结果返回(`return`)了出来，如果不用变量接收，将无法对该结果进行操作。
 
-#### 其他推荐资料
+#### 其他资料推荐
 * [JavaScript函数 - MDN](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Function)
 * [JavaScript函数总结](http://www.qeefee.com/js/javascript-function-summary)
 * [js的函数总结](http://www.jianshu.com/p/421f158fbbb4?utm_campaign=maleskine&utm_content=note&utm_medium=seo_notes&utm_source=recommendation)
