--- a/3 JavaScript基础/3.1 quote.md
+++ b/3 JavaScript基础/3.1 quote.md
@@ -2,17 +2,17 @@
 
 #### 本节学习目标
 
-* 能够通过**内部引用**和**外部引用**两种方式在页面中引入JS代码
+* 能够通过**内部引用**和**外部引用**两种方式在页面中引入JavaScript代码
 
 #### 本节内容
 
-正如我们之前所了解到的，**HTML**控制页面的**内容**，**CSS**控制页面的**样式**，**JS**控制页面的**行为**。
+正如我们之前所了解到的，**HTML**控制页面的**内容**，**CSS**控制页面的**样式**，**JavaScript**控制页面的**行为**。
 
-HTML文档中的一个个标签表达的就是页面中的内容；若想要在HTML文档中加入样式，可以在某一个标签中加入`style`属性同时写上CSS样式即可，如`<p style="font-size:16px"><p/>`，或者将不同选择器的样式写在HTML文档`head`中的`<style>//some css attributes</style>`标签下，也可以在HTML文档中的`head`下加入`link`标签外链CSS文件，如：`<link rel="stylesheet" type="text/css" href="//path to css file">` 。那么我们如何在HTML文档中引入JS呢？
+HTML文档中的一个个标签表达的就是页面中的内容；若想要在HTML文档中加入样式，可以在某一个标签中加入`style`属性同时写上CSS样式即可，如`<p style="font-size:16px"><p/>`，或者将不同选择器的样式写在HTML文档`head`中的`<style>//some css attributes</style>`标签下，也可以在HTML文档中的`head`下加入`link`标签外链CSS文件，如：`<link rel="stylesheet" type="text/css" href="//path to css file">` 。那么我们如何在HTML文档中引入JavaScript呢？
 
 * 内部引用
 
-通过HTML文档内的`script`标签加载JS代码。
+通过HTML文档内的`script`标签加载JavaScript代码。
 
 示例：
 
@@ -22,11 +22,11 @@ HTML文档中的一个个标签表达的就是页面中的内容；若想要在H
 </script>
 ```
 
-通过此方式就可以在当前页面中引入`script`标签中的JS代码。
+通过此方式就可以在当前页面中引入`script`标签中的JavaScript代码。
 
 * 外部引用
 
-也是使用HTML文档的`script`标签，但是要使用`script`标签的`src`属性，指向外部JS文件的路径。
+也是使用HTML文档的`script`标签，但是要使用`script`标签的`src`属性，指向外部JavaScript文件的路径。
 
 示例：
 
@@ -51,14 +51,14 @@ HTML文档中的一个个标签表达的就是页面中的内容；若想要在H
 2. **可缓存**：浏览器能够根据具体的设置缓存链接的所有外部JavaScript文件。也就是说，如果有两个页面都使用同一个文件，那么这个文件只需下载一次。因此，最终结果就是能够加快页面加载的速度。
 3. **适应未来**：统一定义JavaScript代码，方便查看，同时使代码更安全，可以压缩，也可以加密某个JavaScript文件。
 
-#### 推荐其他资料
+#### 其他资料推荐
 
 * [https://www.w3schools.com/html/html\_scripts.asp](https://www.w3schools.com/html/html_scripts.asp "JavaScript Script - w3schools")
 * [https://www.w3schools.com/js/js\_whereto.asp](https://www.w3schools.com/js/js_whereto.asp "JavaScript Where To - w3schools")
 
 #### 本节练习
 
-分别通过**内部引用**和**外部引用**的方式引入下面一段JS代码。
+分别通过**内部引用**和**外部引用**的方式引入下面一段JavaScript代码。
 
 ```JavaScript
 document.write('Hello World');
