--- a/3 JavaScript基础/3.3 shu-ju-lei-xing.md
+++ b/3 JavaScript基础/3.3 shu-ju-lei-xing.md
@@ -2,7 +2,7 @@
 
 #### 本节学习目标
 
-* 了解JS中的七种数据类型
+* 了解JavaScript中的七种数据类型
 
 #### 本节内容
 
@@ -16,7 +16,7 @@ var foo = "bar"; // foo is a String now
 var foo = true;  // foo is a Boolean now
 ```
 
-最新的JS标准定义了 7 种数据类型，它们分别是：
+最新的JavaScript标准定义了 7 种数据类型，它们分别是：
 
 * 6种原始类型：
 
@@ -36,7 +36,7 @@ var foo = true;  // foo is a Boolean now
 
 ##### 原始值
 
-在JS中除 Object 以外的所有类型都是不可变的（值本身无法被改变），我们称这些类型的值为“原始值”。
+在JavaScript中除 Object 以外的所有类型都是不可变的（值本身无法被改变），我们称这些类型的值为“原始值”。
 
 * 布尔类型：`Boolean`
 
@@ -52,7 +52,7 @@ Null 类型只有一个值：`null`，表示空值，表示没有被呈现。
 
 * 数字类型：`Number`
 
-在JS里，数字类型能够代表的范围是**\(-\(2的63次方-1\) ~ \(2的63次方-1\)**。除了具体的数值，在JS中还有一些带符号的值：`+Infinity`，`-Infinity`和`NaN`\(非数值，Not-a-Number\)，分别代表正无穷、负无穷和非数值。例如：
+在JavaScript里，数字类型能够代表的范围是**\(-\(2的63次方-1\) ~ \(2的63次方-1\)**。除了具体的数值，在JavaScript中还有一些带符号的值：`+Infinity`，`-Infinity`和`NaN`\(非数值，Not-a-Number\)，分别代表正无穷、负无穷和非数值。例如：
 
 ```JavaScript
 19 / +0; // Infinity
@@ -63,7 +63,7 @@ Null 类型只有一个值：`null`，表示空值，表示没有被呈现。
 
 JavaScript的字符串类型用于表示文本数据。在字符串中的每个元素占据了字符串的位置。第一个元素的索引为0，下一个是索引1，依此类推。字符串的长度是它的元素的数量。
 
-在JS中的字符串需要使用单引号`'**'`或双引号`"**"`括起来，表示该值是一个字符串。
+在JavaScript中的字符串需要使用单引号`'**'`或双引号`"**"`括起来，表示该值是一个字符串。
 
 JavaScript 字符串是不可更改的。这意味着字符串一旦被创建，就不能被修改。但是，可以基于对原始字符串的操作来创建新的字符串。例如：
 
@@ -95,7 +95,7 @@ var person = {
 上述对象就定义了一个名为’Bob‘，20岁，的男生。
 
 ##### `typeof`操作符
-由于JS是松散类型的，因此需要有一种手段来检测给定变量的数据类型——`typeof`就是负责提供这方面信息的操作符。对一个值使用`typeof`操作符可能返回下列某个字符串：
+由于JavaScript是松散类型的，因此需要有一种手段来检测给定变量的数据类型——`typeof`就是负责提供这方面信息的操作符。对一个值使用`typeof`操作符可能返回下列某个字符串：
 * `'undefined'` —— 未定义
 * `'boolean'` —— 布尔值
 * `'string'` —— 字符串
@@ -111,13 +111,13 @@ alert(typeof 95); // number
 ```
 在实际编程的过程中，可以用`typeof`判断任何一个变量的数据类型。
 
-#### 推荐其他资料
+#### 其他资料推荐
 * [JS数据类型 - MDN](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Data_structures)
 * [JS对象 - MDN](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Guide/Working_with_Objects)
 * [JS数据类型和变量 - Learning Javascript](http://archive.oreilly.com/pub/a/javascript/excerpts/learning-javascript/javascript-datatypes-variables.html)
 
 #### 本节练习
-* 阅读关于JS数据类型的文章，在简书中发一篇文章对JS中基本数据类型进行总结。
+* 阅读关于JavaScript数据类型的文章，在简书中发一篇文章对JavaScript中基本数据类型进行总结。
 * 判断下面的变量分别是什么数据类型：
 ```JavaScript
 var a = 95;
