--- a/3 JavaScript基础/3.8 zi-fu-chuan.md
+++ b/3 JavaScript基础/3.8 zi-fu-chuan.md
@@ -2,14 +2,14 @@
 
 #### 本节学习目标
 
-在JS中，所有的文本数据均被存储为字符串。JS中没有存储单个字符的数据类型，尽管只存储一个字符，也是长度为1的字符串。
+在JavaScript中，所有的文本数据均被存储为字符串。JavaScript中没有存储单个字符的数据类型，尽管只存储一个字符，也是长度为1的字符串。
 
 字符串可以由双引号（`"`）或者单引号（`'`）表示，因此下面两种字符串的写法都是有效的：
 ```JavaScript
 var firstName = 'Hello';
 var lastName = "World";
 ```
-在别的编程语言中，单引号和双引号会影响对字符串的解释方式不同，但是在JS中这两种语法没有什么区别。用双引号表示的字符串和用单引号表示的字符串完全相同。不过，以双引号开头的字符串也必须也双引号结尾，而以单引号开头的字符串必须以单引号结尾。例如：下面这种字符串表示法将会导致语法错误：
+在别的编程语言中，单引号和双引号会影响对字符串的解释方式不同，但是在JavaScript中这两种语法没有什么区别。用双引号表示的字符串和用单引号表示的字符串完全相同。不过，以双引号开头的字符串也必须也双引号结尾，而以单引号开头的字符串必须以单引号结尾。例如：下面这种字符串表示法将会导致语法错误：
 ```JavaScript
 var firstName = 'Hello World"; // 语法错误（左右引号必须匹配）
 ```
@@ -21,7 +21,7 @@ text = text + 'world'; // 也可以用+=表示：text+='world';
 console.log(text); // hello world
 ```
 * 字符字面量
-在JS中，String数据类型中包含一些特殊的字符字面量，也叫做转义字符，用于表示非打印字符，或者具有其他用途的字符。常用的字符字面量如下所示：
+在JavaScript中，String数据类型中包含一些特殊的字符字面量，也叫做转义字符，用于表示非打印字符，或者具有其他用途的字符。常用的字符字面量如下所示：
 * `\n`: 换行
 * `\t`: 制表符
 * `\b`: 退格
@@ -45,7 +45,7 @@ console.log(text.length); // 6 （注意Hello后面还有一个空格）
 ```
 
 * 字符串的特点
-在JS中，字符串是不可变的，也就是说，字符串一旦创建，它们的值就不能改变。要改变某个变量保存的字符串，首先要销毁原来的字符串，然后再用另一个包含新值的字符串填充该变量，例如：
+在JavaScript中，字符串是不可变的，也就是说，字符串一旦创建，它们的值就不能改变。要改变某个变量保存的字符串，首先要销毁原来的字符串，然后再用另一个包含新值的字符串填充该变量，例如：
 ```JavaScript
 var text = 'tws ';
 text = text + 'academy';
@@ -93,7 +93,7 @@ text = text + 'academy';
 * [JS字符串方法总结](https://www.impressivewebs.com/javascript-string-methods-reference/)
 
 #### 本节练习
-* 阅读以上推荐链接，了解所有的JS字符串方法。
+* 阅读以上推荐链接，了解所有的JavaScript字符串方法。
 * 完成下面程序，将`name`变量中的字母全部转为为大写，输出：`'HELLO'`。
 ```JavaScript
 var name = 'hello';
