--- a/3 JavaScript基础/3.9 dui-xiang.md
+++ b/3 JavaScript基础/3.9 dui-xiang.md
@@ -1,14 +1,14 @@
 # 对象
 
 #### 本节学习目标
-* 熟悉JS中的对象的基本用法
+* 熟悉JavaScript中的对象的基本用法
 
 #### 本节内容
-回想之前我们讲到的JS数据类型，其中共有七种数据类型，其中有六种数据类型被称为原始类型，因为它们的值只包含单一的属性（是一个字符串，数字等）；还有一种数据类型就是这节将要讲述的内容 - 对象（`Object`）。JS对象类似真实世界中的对象，它们有不同的属性和行为。也就是说，JS对象就是一组**属性**和**方法（函数）**的集合。一个对象也需要用一个变量来存储，然后通过点(`.`)来访问该对象的属性和方法。
+回想之前我们讲到的JavaScript数据类型，其中共有七种数据类型，其中有六种数据类型被称为原始类型，因为它们的值只包含单一的属性（是一个字符串，数字等）；还有一种数据类型就是这节将要讲述的内容 - 对象（`Object`）。JavaScript对象类似真实世界中的对象，它们有不同的属性和行为。也就是说，JavaScript对象就是一组**属性**和**方法（函数）**的集合。一个对象也需要用一个变量来存储，然后通过点(`.`)来访问该对象的属性和方法。
 
 比如说：就一个人来说，他有姓名，年龄，可以说话，可以走路。姓名和年龄就是这个人的**属性**。说话，走路就是一个人的行为，当然他还可以有其他更为复杂的行为，像这样子的行为被称作**方法**。
 
-在JS中，用大括号的语法就可以创建一个对象，示例如下：
+在JavaScript中，用大括号的语法就可以创建一个对象，示例如下：
 ```JavaScript
 var person = {
   name: "Ming",
@@ -47,13 +47,13 @@ console.log(person.name.last); // 'Calment'
 ```
 
 
-#### 其他推荐资料
-* [JS对象基础](https://developer.mozilla.org/zh-CN/docs/Learn/JavaScript/Objects/Basics)
+#### 其他资料推荐
+* [JavaScript对象基础](https://developer.mozilla.org/zh-CN/docs/Learn/JavaScript/Objects/Basics)
 * [JavaScript对象基础讲解](http://www.codexiu.cn/javascript/blog/40328/)
 * [JavaScript 对象基础](http://wanwu.tech/2017/06/03/object-basics/)
 
 #### 本节练习
-* 阅读推荐链接的文章，复习JS对象基础，并总结为一篇文章，发布到简书上。
+* 阅读推荐链接的文章，复习JavaScript对象基础，并总结为一篇文章，发布到简书上。
 * 编程程序，完成下列需求：
     * 创建一个空对象，变量名为`user`；
     * 添加一个`name`属性，并设置值为`John`；
