--- a/2 基本技能/2.2 intro-markdown.md
+++ b/2 基本技能/2.2 intro-markdown.md
@@ -20,6 +20,10 @@
 - 行内代码：``code``，以及代码块 ```` ````
 - 表格
 
+<video id="video" controls="" preload="none" poster="/assets/Markdown-mark.png">
+      <source id="mp4" src="/video/Learn The Basics Of Markdown in 10 Minutes With This Video Tutorial.mp4" type="video/mp4">
+      <p>抱歉，你的浏览器不支持在线视频播放。</p>
+</video>
 
 #### 资源与工具
 
