update some error

--- a/3 JavaScript基础/3.1 quote.md
+++ b/3 JavaScript基础/3.1 quote.md
@@ -53,8 +53,8 @@ HTML文档中的一个个标签表达的就是页面中的内容；若想要在H
 
 #### 其他资料推荐
 
-* [https://www.w3schools.com/html/html\_scripts.asp](https://www.w3schools.com/html/html_scripts.asp "JavaScript Script - w3schools")
-* [https://www.w3schools.com/js/js\_whereto.asp](https://www.w3schools.com/js/js_whereto.asp "JavaScript Where To - w3schools")
+* [JavaScript Script - w3schools](https://www.w3schools.com/html/html\_scripts.asp)
+* [JavaScript Where To - w3schools](https://www.w3schools.com/js/js\_whereto.asp)
 
 #### 本节练习
 
