--- a/3 JavaScript基础/3.2 variable.md
+++ b/3 JavaScript基础/3.2 variable.md
@@ -63,9 +63,9 @@ var name = 'Bob',
 
 #### 其他资料推荐
 
-* [https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/var](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/var "JS 变量")
+* [JS 变量 - MDN](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/var)
 
-* [https://www.sitepoint.com/how-to-declare-variables-javascript/](https://www.sitepoint.com/how-to-declare-variables-javascript/ "在JS中如何声明变量？")
+* [在JS中如何声明变量？](https://www.sitepoint.com/how-to-declare-variables-javascript/)
 
 #### 本节练习
 
