--- a/3 JavaScript基础/3.6 tiao-jian-fen-zhi.md
+++ b/3 JavaScript基础/3.6 tiao-jian-fen-zhi.md
@@ -253,9 +253,8 @@ switch(date){
 
 #### 参考资料
 
-* [http://www.runoob.com/js/js-if-else.html](http://www.runoob.com/js/js-if-else.html "JavaScript If...Else 语句")
-
-* [http://www.runoob.com/js/js-switch.html](https://www.sitepoint.com/how-to-declare-variables-javascript/http://www.runoob.com/js/js-switch.html "JavaScript switch 语句")
+* [JavaScript If...Else 语句](http://www.runoob.com/js/js-if-else.html)
+* [JavaScript switch 语句](http://www.runoob.com/js/js-switch.html)
 
 #### 本节练习
 
