--- a/2 基本技能/2.2 intro-markdown.md
+++ b/2 基本技能/2.2 intro-markdown.md
@@ -1,15 +1,9 @@
 # markdown 使用
 
-#### 学习目标
-
-
-
-能够熟练掌握 markdown 语法，并能够使用 markdown 来写博客。
+#### 本节学习目标
+* 能够熟练掌握 markdown 语法，并能够使用 markdown 来写博客。
 
 #### 学习内容
-
-
-
 - 各种header, 如`#`, `##`, `###`, 等等，以及`=====`, `------`
 - 文字修饰：`**`, `__`
 - 分隔符 `------`
@@ -20,17 +14,17 @@
 - 行内代码：``code``，以及代码块 ```` ````
 - 表格
 
-<video id="video" controls="" preload="none" poster="/assets/Markdown-mark.png">
+##### 请观看下面的视频讲解
+<video width="100%" id="video" controls="" preload="none" poster="/assets/Markdown-mark.png">
       <source id="mp4" src="/video/Learn The Basics Of Markdown in 10 Minutes With This Video Tutorial.mp4" type="video/mp4">
       <p>抱歉，你的浏览器不支持在线视频播放。</p>
 </video>
 
 #### 资源与工具
-
-
-
 - markdown 编辑器，推荐使用[typora](http://www.typora.io/)
 - [为什么要用Markdown写作](https://zhuanlan.zhihu.com/p/22755240)
 - [《简书》 提供的 markdown 新手指南](http://www.jianshu.com/p/q81RER)
 - 免费的markdown在线预览及示例：<http://dillinger.io/>
 
+#### 本节练习
+* 注册简书账号，并在简书上发布一篇文章，文章的内容为：**Markdown基本语法总结**。
