update software tools with Atom

--- a/1 start/1.2 soft-tools.md
+++ b/1 start/1.2 soft-tools.md
@@ -2,7 +2,7 @@
 
 - 下载并安装 [浏览器 Chrome](https://cn.bing.com/search?q=chrome)
 
-- 下载并安装 [IDE WebStorm](https://www.jetbrains.com/webstorm/)
+- 下载并安装代码编辑器 [Atom](https://atom.io)
 
 - 下载并安装 [Git](https://git-scm.com/)
 
