update intro github pages

--- a/2 基本技能/2.3 how-to-write-blog.md
+++ b/2 基本技能/2.3 how-to-write-blog.md
@@ -9,13 +9,16 @@
 1. 熟练使用markdown进行写作和排版
 2. 结构化的表达观点和内容
 3. 合理地使用图片或图形来辅助文字
-4. 如何在简书等平台写博客
-5. 如何对自己的文章进行宣传推广并获得其他人的反馈
-6. 在简书内发表一篇关于 **如何提问** 的文章，并在下方回复文章的链接
+4. 如何在简书或其它平台写博客
+5. 在简书内发表一篇关于 **如何提问** 的文章，并在下方回复文章的链接
 
 
 #### 资源与工具
 
 - [简书](http://jianshu.com/) 
-- 写文章三段式：<http://www.cnblogs.com/top5/archive/2010/05/19/1739286.html>
-- 总分总结构: <http://www.jianshu.com/p/647c494927d2>
+
+- [精进的技术](https://school.thoughtworks.cn/bbs/topic/33/%E7%B2%BE%E8%BF%9B%E7%9A%84%E6%8A%80%E6%9C%AF)
+
+- [协作驱动学习](http://mp.weixin.qq.com/s/HoFrdB0w3u-SRAg6S69SQQ)
+
+  ​
