--- a/2 基本技能/2.5 intro-github-pages.md
+++ b/2 基本技能/2.5 intro-github-pages.md
@@ -36,12 +36,22 @@
 
 ![](../assets/create-finish.png )
 
-这样一个简单的静态网站就搭建成功了，你也可以搭建自己的博客、简历等，然后把网址发给小伙伴，你的小伙伴就可以看到你的网站了。
+这样一个简单的静态网站就搭建成功了，你可以把网址发给小伙伴，你的小伙伴就可以看到你的网站了。
 
 > 注：第三步的操作也可以使用 Git 来完成
 
 #### 资源与工具
 
+- [如何使用 GitHub](https://www.zhihu.com/question/20070065)
+
+
 - [GitHub pages 搭建](https://pages.github.com/)
 - 廖雪峰的 Git 在线教程：<http://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000>
 - Git 的基础内容的学习： <https://try.github.io/>
+
+
+
+#### 本节练习
+
+- 编写一个静态页面，上传到自己的 GitHub Pages 中并回复链接地址
+
