--- a/2 基本技能/2.2 intro-markdown.md
+++ b/2 基本技能/2.2 intro-markdown.md
@@ -1,7 +1,7 @@
-# markdown 使用
+# Markdown 使用
 
 #### 本节学习目标
-* 能够熟练掌握 markdown 语法，并能够使用 markdown 来写博客。
+* 能够熟练掌握 Markdown 语法，并能够使用 Markdown 来写博客。
 
 #### 学习内容
 - 各种header, 如`#`, `##`, `###`, 等等，以及`=====`, `------`
@@ -15,7 +15,7 @@
 - 表格
 
 ##### 请观看下面的视频讲解
-<video width="100%" id="video" controls="" preload="none" poster="/assets/Markdown-mark.png">
+<video width="100%" id="video" controls="" preload="auto" poster="/assets/Markdown-mark.png">
       <source id="mp4" src="/video/Learn The Basics Of Markdown in 10 Minutes With This Video Tutorial.mp4" type="video/mp4">
       <p>抱歉，你的浏览器不支持在线视频播放。</p>
 </video>
