--- a/2 基本技能/2.6 zai-chromedevtools-zhong-jin-xing-diao-shi.md
+++ b/2 基本技能/2.6 zai-chromedevtools-zhong-jin-xing-diao-shi.md
@@ -6,7 +6,7 @@
 
 #### 本节内容
 
-如何正确高效的定位到程序中存在的问题，进行bug的调试，也是一项基本的技能。在我们进入任务卡编写更加复杂的代码之前，我们有必要来学习一下如何利用Chrome DevTools进行页面的调试。
+如何正确高效的定位到程序中存在的问题，进行bug的调试，也是一项基本的技能。在我们进入任务卡编写更加复杂的代码之前，我们有必要先学习一下如何利用Chrome DevTools进行页面的调试。
 
 几乎所有的现代浏览器都支持直接在浏览器中对页面进行**调试**，开发工具在浏览器中是一个单独的页面，以使我们调试起来更加方便。在这节中，我们以Chrome为例，因为Chrome的DevTools在调试方面的功能是最丰富的。
 
@@ -44,6 +44,8 @@
   我们在DevTools中定位在Console模块，当前模块可以用来查看和调试当前页面所加载的脚本的源文件。换句话说，我们可以在Console模块中执行JavaScript脚本。
 
 ![](/assets/devtools4.png)
+
+> **提示：**在接下来Pre-Course中JavaScript基础的练习，建议大家都在浏览器DevTools中的Console面板进行练习。
 
 若我们的页面中出现了一些错误，我们打开DevTools的Console面板也可以看到在该面板中是有页面的报错的。如下：  
 我们的JavaScript脚本为：
