--- a/2 基本技能/2.4 intro-git.md
+++ b/2 基本技能/2.4 intro-git.md
@@ -20,8 +20,13 @@
 
 #### 资源与工具
 
-
-
 - 廖雪峰的 Git 在线教程：<http://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000>
 - Git 的基础内容的学习： <https://try.github.io/>
 
+#### 本节练习
+* 首先在自己的电脑上安装Git，通过`git --version`是否显示Git版本号，确认本机Git是否安装成功。然后，完成以下练习：
+    * 配置自己的信息**用户名**和**邮箱**信息；
+    
+
+* 完成GitHub官方提供的Git练习，并截图。
+[Try Git](https://try.github.io)
