update some article and videos

--- a/2 基本技能/2.4 intro-git.md
+++ b/2 基本技能/2.4 intro-git.md
@@ -17,6 +17,11 @@
 - 如何把本地仓库推送到远程仓库：`git push`
 - 如何把远程代码拉到本地：`git pull`
 
+##### 推荐的视频
+<video width="100%" id="video" controls="" preload="auto" poster="">
+      <source id="mp4" src="/video/git Tutorial For Beginners.mp4" type="video/mp4">
+      <p>抱歉，你的浏览器不支持在线视频播放。</p>
+</video>
 
 #### 资源与工具
 
@@ -24,9 +29,7 @@
 - Git 的基础内容的学习： <https://try.github.io/>
 
 #### 本节练习
-* 首先在自己的电脑上安装Git，通过`git --version`是否显示Git版本号，确认本机Git是否安装成功。然后，完成以下练习：
-    * 配置自己的信息**用户名**和**邮箱**信息；
-    
+* 首先在自己的电脑上安装Git，通过`git --version`是否显示Git版本号，判断本机Git是否安装成功。然后，配置**用户名**和**邮箱**信息（`git config`）。
 
 * 完成GitHub官方提供的Git练习，并截图。
 [Try Git](https://try.github.io)
