--- a/2 基本技能/2.5 intro-github-pages.md
+++ b/2 基本技能/2.5 intro-github-pages.md
@@ -6,6 +6,12 @@
 
 #### 学习内容
 
+观看下面视频了解[GitHub](https://github.com):
+<video width="100%" id="video" controls="" preload="auto" poster="">
+      <source id="mp4" src="/video/First Look • Collaboration with Git and GitHub.mp4" type="video/mp4">
+      <p>抱歉，你的浏览器不支持在线视频播放。</p>
+</video>
+那么什么是GitHub Page呢？
 1. 什么是 GitHub Pages
 
 > GitHub Pages 是 [GitHub](www.github.com) 的静态页面托管服务。它设计的初衷是为了用户能够直接通过  [GitHub](www.github.com) 仓库来托管用户个人、组织或是项目的专属页面。参考：[What is GitHub Pages?](http://link.zhihu.com/?target=https%3A//help.github.com/articles/what-is-github-pages/)
@@ -43,8 +49,6 @@
 #### 资源与工具
 
 - [如何使用 GitHub](https://www.zhihu.com/question/20070065)
-
-
 - [GitHub pages 搭建](https://pages.github.com/)
 - 廖雪峰的 Git 在线教程：<http://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000>
 - Git 的基础内容的学习： <https://try.github.io/>
@@ -52,6 +56,6 @@
 
 
 #### 本节练习
-
-- 编写一个静态页面，上传到自己的 GitHub Pages 中并回复链接地址
+- 先注册一个GitHub账号，在GitHub中新建一个库，尝试`git clone`到本地进行修改，并`git push`上传到Github。
+- 编写一个静态页面，上传到自己的 GitHub Pages 中并回复链接地址。
 
