add logic chapter to master branch

--- a/2 基本技能/2.3 how-to-write-blog.md
+++ b/2 基本技能/2.3 how-to-write-blog.md
@@ -2,7 +2,7 @@
 
 #### 学习目标
 
-掌握如何以博客的形式来整理和表达自己平时学到的知识和思考，博客能够做到结构清晰、图文并茂、表达清楚
+* 掌握如何以博客的形式来整理和表达自己平时学到的知识和思考，博客能够做到结构清晰、图文并茂、表达清楚
 
 #### 学习内容
 
