--- a/2 基本技能/2.5 intro-github-pages.md
+++ b/2 基本技能/2.5 intro-github-pages.md
@@ -1,10 +1,10 @@
 # GitHub Pages
 
-#### 学习目标
+#### 本节学习目标
 
-能够使用 GitHub Pages 来搭建自己的静态页面
+* 能够使用 GitHub Pages 来搭建自己的静态页面
 
-#### 学习内容
+#### 本节学习内容
 
 观看下面视频了解[GitHub](https://github.com):
 
