--- a/1 start/1.2 soft-tools.md
+++ b/1 start/1.2 soft-tools.md
@@ -20,7 +20,7 @@
 
 
 
-通过一番探索，对任务有了一些了解后，我们肯定想要开始实践起来，那么合适的工具就必不可少了，点火的方式有很多，你可以钻木起火，也可以直接拿个打火机点火，**[IDE WebStorm](https://www.jetbrains.com/webstorm/)**就是这么个打火机，它可以大大的提高我们的工作效率。
+通过一番探索，对任务有了一些了解后，我们肯定想要开始实践起来，那么合适的工具就必不可少了，点火的方式有很多，你可以钻木起火，也可以直接拿个打火机点火，**[Atom](https://atom.io)** 就是这么个打火机，它可以大大的提高我们的工作效率。
 
 
 
