update some mistake words

--- a/2 基本技能/2.3 how-to-write-blog.md
+++ b/2 基本技能/2.3 how-to-write-blog.md
@@ -19,6 +19,6 @@
 
 - [精进的技术](https://school.thoughtworks.cn/bbs/topic/33/%E7%B2%BE%E8%BF%9B%E7%9A%84%E6%8A%80%E6%9C%AF)
 
-- [协作驱动学习](http://mp.weixin.qq.com/s/HoFrdB0w3u-SRAg6S69SQQ)
+- [写作驱动学习](http://mp.weixin.qq.com/s/HoFrdB0w3u-SRAg6S69SQQ)
 
   ​
